welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:14: error: ')' expected but string literal found.
else if (litMessag e== "R") {
                       ^BDRBuggle:39: error: illegal start of simple expression
	}
        ^